# csv2tidal

./: pyproject.toml  readme.md  requirements.txt
csv2tidal/: app.py
docs/: FAQ.md  TIPS.md  TROUBLESHOOTING.md  USAGE.md
